--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Mahmoud Shidid</h1>
-      <p>I'm <span class="typed" data-typed-items="Innovator, Teacher, Developer, Leader"></span></p>
+      <p><span class="typed" data-typed-items="Innovator, Teacher, Developer, Leader"></span></p>
       <div class="social-links">
         <a href="https://www.instagram.com/mahmoud_shidid/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.linkedin.com/in/mahmoud-shidid-293999203/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -90,7 +90,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 October 1998</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.mahmoudshidid.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://mahmoudshidid.github.io/shididResume/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 (845) 549-5863</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Orange County, NY</span></li>
                 </ul>
