--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 October 1998</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://mahmoudshidid.github.io/shididResume/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>mahmoudshidid.github.io/shididResume/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 (845) 549-5863</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Orange County, NY</span></li>
                 </ul>
