--- a/index.html
+++ b/index.html
@@ -134,11 +134,12 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Tech Expert and Computer Science Mentor</h4>
-              <h5>2021 - Present</h5>
+              <h4>I.T Assistant and Computer Science Mentor</h4>
+              <h5>07/2021 - 08/2023</h5>
               <p><em>Fusion Academy, White Plains, NY </em></p>
               <ul>
               	<li>Troubleshoot all technology in the building; computers, robotics, VR devices, tablets, printers, etc.</li>
+                <li>Liaison between I.T department and building</li>
                 <li>Mentored students in Computer Programming with strong focus on Object Oriented Design(Java)</li>
                 <li>Mentored students in building robotics, video game design and creation, 3d modeling, computer architecture, and more</li>
               </ul>
